# Ray-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Linux.sh  README.md  Run.bat  Win.bat  compile_commands.json
.cache/clangd/index/: cgltf.h.4B9C447AA3923538.idx  config.h.E872C0774F83F752.idx  context.c.186AD9BC8D5994D7.idx  dr_mp3.h.3BD60FBCA96F752E.idx  dr_wav.h.6257ACBDC59179AC.idx  egl_context.c.32A63D8C615E5625.idx  glad.h.658F37E2B60F0797.idx  glfw3.h.3C368B41E83FEA5F.idx  glfw3native.h.90103F965C2CA746.idx  glx_context.c.2CAD9A91774BCB63.idx  hello.cpp.C9499DD5610363FD.idx  hello.h.9CDE1330887A3B89.idx  init.c.D0E99D016A0F1D27.idx  input.c.05B78729A4EB1CCD.idx  internal.h.05CDCF3E059D0B37.idx  jar_mod.h.B9823FC7FCF5E968.idx  jar_xm.h.7EA9CD20C07BD8C7.idx  linux_joystick.c.83F72AAAB237EB45.idx  linux_joystick.h.EA4DF90FFF9306EA.idx  m3d.h.1C4157EDE01FFD6A.idx  main.cpp.A288C8C2EF7414C5.idx  mappings.h.ED1245E801BBC429.idx  miniaudio.h.564A8E275285D572.idx  monitor.c.1F4D43275649BA09.idx  msf_gif.h.1EF1A7EFBF7EDB10.idx  null_init.c.30C4C499F9C228B6.idx  null_joystick.c.75E0C29C56A55F5B.idx  null_joystick.h.169764DCAF30B807.idx  null_monitor.c.CE932A241DE3D30A.idx  null_platform.h.28AB737C93C018CE.idx  null_window.c.3FD9737D2E6182EB.idx  osmesa_context.c.D8A2FACA3361810C.idx  par_shapes.h.27006B71CF7C7E47.idx  platform.c.779F9047B735C534.idx  platform.h.07392D3EAC779E63.idx  posix_module.c.615E92667008681F.idx  posix_poll.c.9DC97BC539A97083.idx  posix_poll.h.6237365B4A35A4DE.idx  posix_thread.c.DC4026EF620B225B.idx  posix_thread.h.30A83E0D2887CA21.idx  (+40 more)
Data/Shaders/: BasicLight.glsl  skybox.fs  skybox.vs
Resources/FinalBaseMesh/: result.gltf
Resources/Hip Hop Dancing/: Hip Hop Dancing.mtl
Resources/HipHopDancing/: result.gltf
Resources/Silly Dancing/: result.gltf
Resources/box/: box.mtl
Resources/cube/: cube.mtl
Resources/sphere/: sphere.mtl
Targets/Debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
Targets/Debug/.cache/clangd/index/: cmake_pch.hxx.301A02452F02989D.idx  cmake_pch.hxx.6CC933EF63E87196.idx
Targets/Debug/app/: Makefile  cmake_install.cmake
Targets/Debug/engine/: Makefile  cmake_install.cmake
app/: CMakeLists.txt
app/include/: TestApp.h  TestLayer.h
app/src/: main.cpp
engine/: CMakeLists.txt
engine/include/: repch.h
engine/include/Auxiliaries/: Assets.h  Physics.h  rayext.h
engine/include/Core/: Application.h  Config.h  ImGuiHelper.h  ImGuiLayer.h  Layer.h  LayerStack.h  PlatformDetection.h  UUID.h  Window.h
engine/include/Scene/: Components.h  Entity.h  Scene.h
engine/src/: hello.cpp
engine/src/Core/: Application.cpp  ImGuiLayer.cpp  Layer.cpp  LayerStack.cpp  Physics.cpp  UUID.cpp
engine/src/Scene/: Entity.cpp  Scene.cpp
